--- a/requirements_bird.txt
+++ b/requirements_bird.txt
@@ -1,9 +1,9 @@
-streamlit
-pandas
-numpy
-matplotlib
-scikit-learn
-xgboost
-matplotlib
-seaborn
-plotly
+streamlit>=1.30.0
+pandas>=2.0.0
+numpy>=1.24.0
+matplotlib>=3.7.0
+scikit-learn>=1.2.0
+xgboost>=1.7.0
+seaborn>=0.12.0
+plotly>=5.15.0
+tqdm>=4.65.0
